[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/player_weapon_fires/vengeful_spirits/vengeful_spirit_03.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/player_weapon_fires/vengeful_spirits/vengeful_spirit_04.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/player_weapon_fires/vengeful_spirits/vengeful_spirit_02.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/player_weapon_fires/vengeful_spirits/vengeful_spirit_05.png" type="Texture" id=4]
[ext_resource path="res://scenes/player_weapon_fires/VengefulSpiritWeaponFire.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/player_weapon_fires/vengeful_spirits/vengeful_spirit_01.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 15 )

[node name="VengefulSpiritWeaponFire" type="Area2D"]
script = ExtResource( 5 )
shrink_tween_path = NodePath("ShrinkTween")
lifetime_timer_path = NodePath("LifetimeTimer")

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="LifetimeTimer" type="Timer" parent="."]
one_shot = true

[node name="ShrinkTween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_VengefulSpiritWeaponFire_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_LifetimeTimer_timeout"]
[connection signal="tween_all_completed" from="ShrinkTween" to="." method="_on_ShrinkTween_tween_all_completed"]
